Fix hero sizing bug on Firefox
Hero now occupies only a part of the left side of the screen, instead of stretching horizontally to fit the viewport.

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 
 :root {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, Adwaita Sans, Cantarell, Ubuntu, roboto, noto, helvetica, arial, sans-serif;
     /* 1 rem = 10px */
     font-size: 62.5%;
 
@@ -36,22 +36,18 @@ body {
 
 
 /* || Left banner */
-
 .hero {
-    position: relative;
-    min-width: fit-content;
-    max-width: fit-content;
-}
+    min-width: 500px;
+    width: 500px;
+    background-image: url("assets/halie-west-25xggax4bSA-unsplash.jpg");
+    background-size: 500px 100vh;
 
-.hero .bg {
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .hero .banner {
-    position: absolute;
-    top: 15%;
-    width: 100%;
-
     background-color: rgba(0, 0, 0, 40%);
 
     display: flex;
@@ -74,15 +70,6 @@ body {
 .hero .img-attribution {
     font-size: 2rem;
     color: var(--hero-text-color);
-
-    position: absolute;
-    bottom: 3rem;
-
-    /* Center text */
-    left: 0;
-    right: 0;
-    width: fit-content;
-    margin-inline: auto;
 
     /* For overflow when font size is too large */
     text-align: center;
